--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="home-template">
 <div class="site-wrapper">
 	<nav class="main-nav overlay clearfix">
-	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fashion Critiques"/></a>
+	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fasasasasa"/></a>
 	<ul id="menu">
 		<li class="nav-home nav-current" role="presentation"><a href="index.html">Home</a></li>
 		<li class="nav-article-example" role="presentation"><a href="article.html">Post Example</a></li>
