--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!-- <a href="#"><span class='symbol'>circletwitterbird</span></a> -->
 		<!--<a href="#"><span class='symbol'>circlefacebook</span></a>-->
 		<!--<a href="#"><span class='symbol'>circlegoogleplus</span></a>-->
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<a href="fcoalvialv@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
@@ -37,7 +37,7 @@
 			<h2 class="page-description">Thoughts, reviews and ideas since 1999.</h2>
 		</div>
 	</div>
-	<a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
+	<a class="scroll-down icon-arrow-left" href="#content" data-offset="-90"><span class="hidden">Scroll Down</span></a>
 	</header>
 	<main id="content" class="content" role="main">
 	<div class="wraps">
