--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<title>Nectaria - Free HTML Template by WowThemes.net</title>
+<title>Francisco Javier Alvial Vásquez</title>
 <meta name="description" content="Thoughts, reviews and ideas since 1999."/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <link rel="shortcut icon" href="#">
@@ -20,10 +20,10 @@
 		<li class="nav-about-us" role="presentation"><a href="about.html">Page Example</a></li>
 		<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>
 		<span class="socialheader">
-		<a href="#"><span class='symbol'>circletwitterbird</span></a>
-		<a href="#"><span class='symbol'>circlefacebook</span></a>
-		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
-		<a href="mailto:wowthemesnet@gmail.com"><span class='symbol'>circleemail</span></a>
+		<!-- <a href="#"><span class='symbol'>circletwitterbird</span></a>> -->
+		<!-- <a href="#"><span class='symbol'>circlefacebook</span></a> -->
+		<!-- <a href="#"><span class='symbol'>circlegoogleplus</span></a> -->
+		<a href="fcoalvialv@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
 	</nav>
