--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<nav class="main-nav overlay clearfix">
 	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fasasasasa"/></a>
 	<ul id="menu">
-		<li class="nav-home nav-current" role="presentation"><a href="index.html">About</a></li>
+		<li class="nav-home nav-current" role="presentation"><a href="author.html">About</a></li>
 		<li class="nav-article-example" role="presentation"><a href="article.html">Teaching</a></li>
 		<li class="nav-about-us" role="presentation"><a href="about.html">Research</a></li>
-		<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>
+		<!--<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>-->
 		<span class="socialheader">
 		<!-- <a href="#"><span class='symbol'>circletwitterbird</span></a> -->
 		<!--<a href="#"><span class='symbol'>circlefacebook</span></a>-->
