--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 		<li class="nav-about-us" role="presentation"><a href="about.html">Research</a></li>
 		<!--<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>-->
 		<span class="socialheader">
-		<a href="#"><span class='symbol'>circletwitterbird</span></a>
-		<a href="#"><span class='symbol'>circlefacebook</span></a>
-		<a href="#"><span class='symbol'>circlegoogleplus</span></a>
+		<!--<a href="#"><span class='symbol'>circletwitterbird</span></a>-->
+		<!--<a href="#"><span class='symbol'>circlefacebook</span></a>-->
+		<!--<a href="#"><span class='symbol'>circlegoogleplus</span></a>-->
 		<a href="fcoalvialv@gmail.com"><span class='symbol'>circleemail</span></a>
 		</span>
 	</ul>
