--- a/article.html
+++ b/article.html
@@ -15,7 +15,7 @@
 	<nav class="main-nav overlay clearfix">
 	<a class="blog-logo" href="index.html"><img src="assets/img/logo.png" alt="Fashion Critiques"/></a>
 	<ul id="menu">
-		<li class="nav-home nav-current" role="presentation"><a href="author.html">About</a></li>
+		<li class="nav-home nav-current" role="presentation"><a href="index.html">About</a></li>
 		<li class="nav-article-example" role="presentation"><a href="article.html">Teaching</a></li>
 		<li class="nav-about-us" role="presentation"><a href="about.html">Research</a></li>
 		<!--<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>-->
