--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</header>
 	<section class="author-profile inner">
 	<figure class="author-image">
-	<div class="img" style="background-image: url(assets/img/gravatar.jpg)">
+	<div class="img" style="background-image: url(assets/img/foto.jpg)">
 		<span class="hidden">David's Picture</span>
 	</div>
 	</figure>
