--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+p.ex1 {
+  margin: 35px 70px 50px 90px;
+}<!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Francisco J. Alvial Vásquez</title>
@@ -37,6 +40,7 @@
 	</figure>
 
 	<h1 style="color:white;"> Francisco J. Alvial Vásquez</h1>
+		<p class="ex1">This paragraph has a 35 pixels margin for top, a 70 pixels margin for right, a 50 pixels margin for bottom, and a 90 pixels margin for left.</p>
 	<h2 style="color:white;">is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.
