--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
 p.ex1 {
   margin: 35px 70px 50px 90px;
-}<!-- Margenes-->
+}
+</style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Francisco J. Alvial Vásquez</title>
