--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ p.ex1 {
 	</figure>
 
 	<h1 style="color:white;"> Francisco J. Alvial Vásquez</h1>
-		<p class="ex1">This paragraph has a 35 pixels margin for top, a 70 pixels margin for right, a 50 pixels margin for bottom, and a 90 pixels margin for left.</p>
+		<p class="ex1";>is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
+		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
+	 simulations and their evaluation in hydrological models.</p>
 	<h2 style="color:white;">is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.
