--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@ p.ex1 {
 		<p class="ex1";>is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.</p>
+	<p>I currently belong to the doctoral program in physical sciences of the
+		<a href="https://www.cfm.cl/">Physics Department</a> of the <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, 
+		Concepción, Chile.</p>
+	
+		
+		
 	<h2 style="color:white;">is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.
