--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 p.ex1 {
-  margin: 10px -120px 50px -100px;
+  margin: 70px -120px 50px -100px;
 }
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
@@ -46,8 +46,7 @@ p.ex1 {
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.</p>
 	<p>I currently belong to the doctoral program in physical sciences of the
-		<a href="https://www.cfm.cl/">Physics Department</a> of the <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, 
-		Concepción, Chile.</p>
+		Physics Department of the Universidad de Concepción, Concepción, Chile.</p>
 	
 		
 		
