--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ p.ex1 {
 	</figure>
 
 	<h1 style="color:white;"> Francisco J. Alvial Vásquez</h1>
-		<p class="ex1";>is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
+		<p class="ex1";>Is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.</p>
 	<p>I currently belong to the doctoral program in physical sciences of the
