--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p.ex1 {
 	<ul id="menu">
 		<li class="nav-home nav-current" role="presentation"><a href="index.html">About</a></li>
 		<li class="nav-article-example" role="presentation"><a href="teaching.html">Teaching</a></li>
-		<li class="nav-about-us" role="presentation"><a href="about.html">Research</a></li>
+		<li class="nav-about-us" role="presentation"><a href="research.html">Research</a></li>
 		<!--<li class="nav-author-page" role="presentation"><a href="author.html">Author Page</a></li>-->
 		<span class="socialheader">
 		<!--<a href="#"><span class='symbol'>circletwitterbird</span></a>-->
