--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@ p.ex1 {
 	</section>
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
-
+		
+	<h1 style="color:white;"> Francisco J. Alvial Vásquez</h1>
+		
 	</footer>
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
