--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@ p.ex1 {
 	<p>I currently belong to the doctoral program in physical sciences of the
 		Physics Department of the Universidad de Concepción, Concepción, Chile.</p>
 		
-		<h2 style="color:white;"> Francisco J. Alvial Vásquez</h2>
+	<h2 style="color:white;"> Current research interests</h2>
+	<ul>
+ 	<li>Use of satellite-based data and reanalysis for the development of high resolution hydroclimatic fields; monitoring of extreme hydrological events and hydrological modeling..</li>
+ 	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
+  	<li>Use of open-source tools for management and analysis of hydro-meteorological data (<a href="https://www.python.org/">Python</a>, <a href="https://www.r-project.org/">R</a>, <a href="http://www.qgis.org/">Qgis</a>, <a href="https://www.mmm.ucar.edu/">WRF</a>, <a href="https://ral.ucar.edu/projects/wrf_hydro/overview">WRF-Hydro</a>).</li>
+	</ul>
+		
+		
 	</section>
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
