--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <style>
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
 p.ex1 {
   margin: 70px -120px 50px -100px;
 }
