--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@ p.ex1 {
  	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
   	<li>Use of open-source tools for management and analysis of hydro-meteorological data (<a href="https://www.python.org/">Python</a>, <a href="https://www.r-project.org/">R</a>, <a href="http://www.qgis.org/">Qgis</a>, <a href="https://www.mmm.ucar.edu/">WRF</a>, <a href="https://ral.ucar.edu/projects/wrf_hydro/overview">WRF-Hydro</a>).</li>
 	</ul>
+	<h3 id="education">Education</h3>
+	<ul>
+  	<li>2019-present: <strong>PhD student in Applied Physics</strong>, Physics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile.</li>
+  	<li>2010-2018: <strong>Geophysicist</strong>, Geophysics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile. Thesis title: <em>Producto de precipitación reticulado en alta resolución espacial; una metodología dinámico-geoestadística aplicada en la zona Centro-Sur (32°S-41°S) de Chile</em></li>
+	</ul>
+
+<hr />
 		
 		
 	</section>
