--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ p.ex1 {
 		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
 	 simulations and their evaluation in hydrological models.</p>
 	<p>I currently belong to the doctoral program in physical sciences of the
-		Physics Department of the Universidad de Concepción, Concepción, Chile.</p>
+		<a href="https://www.cfm.cl/">Physics Department</a> of the <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile.</p>
+		
 		
 	<h2 style="color:white;"> Current research interests</h2>
 	<ul>
