--- a/research.html
+++ b/research.html
@@ -35,6 +35,9 @@
 	</div>
 	</header>
 	
+	<h2 style="color:white;"> Current research interests</h2>
+	
+	
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
 	<div class="text-center">
