--- a/research.html
+++ b/research.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+p.ex1 {
+  margin: 70px -120px 50px -100px;
+}
+</style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>Francisco J. Alvial Vásquez</title>
