--- a/research.html
+++ b/research.html
@@ -46,6 +46,9 @@ p.ex1 {
 	</header>
 	
 	<h2 style="color:white;"> Current research interests</h2>
+	<p class="ex1";>Is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
+		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
+	 simulations and their evaluation in hydrological models.</p>
 	<ul>
  	<li>Use of satellite-based data and reanalysis for the development of high resolution hydroclimatic fields; monitoring of extreme hydrological events and hydrological modeling..</li>
  	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
