--- a/research.html
+++ b/research.html
@@ -7,9 +7,10 @@ a:link {
   background-color: transparent;
   text-decoration: none;
 }
-p.ex1 {
-  margin: 70px -120px 50px -100px;
-}
+h1 {text-align: center;}
+h2 {text-align: center;}
+h3 {text-align: center;}
+p {text-align: center;}
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
