--- a/research.html
+++ b/research.html
@@ -10,7 +10,9 @@ a:link {
 h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}
-p {text-align: center;}
+p.ex1 {
+  margin: 70px -120px 50px -100px;
+}
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
