--- a/research.html
+++ b/research.html
@@ -7,6 +7,9 @@ a:link {
   background-color: transparent;
   text-decoration: none;
 }
+p.ex1 {
+  margin: 70px -120px 50px -100px;
+}
 h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}
