--- a/research.html
+++ b/research.html
@@ -48,10 +48,13 @@ h3 {text-align: center;}
 	</div>
 	</header>
 	
-	<h2 style="color:white;"> Current research interests</h2>
-	<p class="ex1";>Is a geophysicist and doctoral student in physics. In particular, he focuses on the prediction,
-		attribution and impact of hydro-climatic phenomena, through the use of observations, satellite data, reanalysis products, 
-	 simulations and their evaluation in hydrological models.</p>
+	<h2 style="color:white;">Articles</h2>
+	<ul>
+	<li><p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I.<a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
+		Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
+		frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975
+		</p></li>
+	</ul>	
 	<ul>
  	<li>Use of satellite-based data and reanalysis for the development of high resolution hydroclimatic fields; monitoring of extreme hydrological events and hydrological modeling..</li>
  	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
