--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@ h3 {text-align: center;}
 	
 	<h2 style="color:white;">Articles</h2>
 	<ul>
-	<li><p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I.<a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
+	<li><p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020)<a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
 		Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
 		frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975
 		</p></li>
