--- a/research.html
+++ b/research.html
@@ -49,12 +49,9 @@ h3 {text-align: center;}
 	</header>
 	
 	<h2 style="color:white;">Articles</h2>
-	<p class="ex1";><ul><li>pp</li></ul></p>
-	<ul><li><p class="ex1";>pp</p></li></ul>
-	<p class="ex1";><li>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020) <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
+	<p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020) <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
-	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975
-	</li></p>
+	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
 	<ul>
  	<li>Use of satellite-based data and reanalysis for the development of high resolution hydroclimatic fields; monitoring of extreme hydrological events and hydrological modeling..</li>
  	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
