--- a/research.html
+++ b/research.html
@@ -52,10 +52,10 @@ h3 {text-align: center;}
 	<p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020) <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
 	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
+	<h3 style="color:white;">Education</h3>
 	<ul>
- 	<li>Use of satellite-based data and reanalysis for the development of high resolution hydroclimatic fields; monitoring of extreme hydrological events and hydrological modeling..</li>
- 	<li>Spatio-temporal analysis of rainfall and extreme events in areas with scarce data.</li>
-  	<li>Use of open-source tools for management and analysis of hydro-meteorological data (<a href="https://www.python.org/">Python</a>, <a href="https://www.r-project.org/">R</a>, <a href="http://www.qgis.org/">Qgis</a>, <a href="https://www.mmm.ucar.edu/">WRF</a>, <a href="https://ral.ucar.edu/projects/wrf_hydro/overview">WRF-Hydro</a>).</li>
+  	<li>2019-present: <strong>PhD student in Applied Physics</strong>, Physics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile.</li>
+  	<li>2010-2018: <strong>Geophysicist</strong>, Geophysics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile. Thesis title: <em>Producto de precipitación reticulado en alta resolución espacial; una metodología dinámico-geoestadística aplicada en la zona Centro-Sur (32°S-41°S) de Chile</em></li>
 	</ul>
 	
 	<footer class="site-footer clearfix">
