--- a/research.html
+++ b/research.html
@@ -53,10 +53,14 @@ h3 {text-align: center;}
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
 	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
 	<h3 style="color:white;">Education</h3>
+	<div class="parent">
 	<ul>
-  	<li>2019-present: <strong>PhD student in Applied Physics</strong>, Physics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile.</li>
-  	<li>2010-2018: <strong>Geophysicist</strong>, Geophysics Department, Faculty of Physical Sciences and Mathematics, <a href="http://www6.udec.cl/pexterno/">Universidad de Concepción</a>, Concepción, Chile. Thesis title: <em>Producto de precipitación reticulado en alta resolución espacial; una metodología dinámico-geoestadística aplicada en la zona Centro-Sur (32°S-41°S) de Chile</em></li>
+		<li>Item 1</li>
+		<li>Item 2</li>
+		<li>Item 3</li>
+		<li>Item 4</li>
 	</ul>
+	</div>
 	
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
