--- a/research.html
+++ b/research.html
@@ -13,6 +13,13 @@ p.ex1 {
 h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}
+div.parent {
+	text-align: center;
+}
+ul { 
+	display: inline-block; 
+	text-align: left; 
+}
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
