--- a/research.html
+++ b/research.html
@@ -13,13 +13,7 @@ p.ex1 {
 h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}
-div.parent {
-	text-align: center;
-}
-ul { 
-	display: inline-block; 
-	text-align: left; 
-}
+li {list-style-position: inside;}
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -60,14 +54,11 @@ ul {
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
 	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
 	<h3 style="color:white;">Education</h3>
-	<div class="parent">
-	<ul>
-		<li>Item 1</li>
-		<li>Item 2</li>
-		<li>Item 3</li>
-		<li>Item 4</li>
-	</ul>
-	</div>
+	<ol>
+  <li style="text-align: left">item 1</li>
+  <li style="text-align: center">item 2</li>
+  <li style="text-align: right">item 3</li>
+</ol>
 	
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
