--- a/research.html
+++ b/research.html
@@ -55,7 +55,7 @@ li {list-style-position: inside;}
 	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
 	<h3 style="color:white;">Education</h3>
 	<ol>
-  <li style="text-align: left">item 1</li>
+  <li style="text-align: center">item 1</li>
   <li style="text-align: center">item 2</li>
   <li style="text-align: right">item 3</li>
 </ol>
