--- a/research.html
+++ b/research.html
@@ -14,6 +14,10 @@ h1 {text-align: center;}
 h2 {text-align: center;}
 h3 {text-align: center;}
 li {list-style-position: inside;}
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
 </style><!-- Margenes-->
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -59,6 +63,11 @@ li {list-style-position: inside;}
   <li style="text-align: center">item 2</li>
   <li style="text-align: right">item 3</li>
 </ol>
+	<ul>
+    <li>one</li>
+    <li>two</li>
+    <li>three</li>
+</ul>
 	
 	<footer class="site-footer clearfix">
 	<a href="#top" id="back-to-top" class="back-top"></a>
