--- a/research.html
+++ b/research.html
@@ -58,6 +58,17 @@ ul {
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
 	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
 	<h3 style="color:white;"> Conferences </h3>
+	<div style="width: 25%; margin-left: auto; margin-right: auto;">
+    <ul>
+        <li>Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
+		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. (2019), 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
+	<li>Set of high-resolution precipitation gridded data on the South-Central zone (34 • S-41 • S) of Chile. (2018) </li>
+	<li>Mapeo de zonas de protección de aguas superficiales en terrenos agro-forestales sobre una microcuenca de la región del Ñuble. (2018) </li>
+    	<li>Modelación de inundaciones repentinas, evaluación del model Marine y su aplicabilidad en cuencas chilenas. (2017)</li>
+    	<li>Una nueva base de datos climáticos para campos de hielo norte. (2017) </li>
+    </ul>
+</div>
+
 	<ul>
 	<li>Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
 		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. (2019), 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
