--- a/research.html
+++ b/research.html
@@ -54,19 +54,27 @@ ul {
 	</header>
 	
 	<h2 style="color:white;">Articles</h2>
-	<p class="ex1";>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020), <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
+	<div style="width: 75%; margin-left: auto; margin-right: auto;">
+		
+	<ul>
+        <li>Alvial Vásquez, Francisco-J. and Abarca-del-Río, Rodrigo and Ávila, Andrés I. (2020), <a href="https://www.frontiersin.org/articles/10.3389/feart.2020.519975/full">High-Resolution
 	Precipitation Gridded Dataset on the South-Central Zone (34° S–41° S) of Chile</a>, <a href="https://www.frontiersin.org/journals/earth-science#">
-	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</p>
+	frontiers in Earth Science</a>, doi: 10.3389/feart.2020.519975</li>
+    </ul>
 	
 	<h3 style="color:white;"> Conferences </h3>
 	<div style="width: 75%; margin-left: auto; margin-right: auto;">
     <ul>
-        <li>Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
-		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. (2019), 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
-	<li>Set of high-resolution precipitation gridded data on the South-Central zone (34 • S-41 • S) of Chile. (2018) </li>
-	<li>Mapeo de zonas de protección de aguas superficiales en terrenos agro-forestales sobre una microcuenca de la región del Ñuble. (2018) </li>
-    	<li>Modelación de inundaciones repentinas, evaluación del model Marine y su aplicabilidad en cuencas chilenas. (2017)</li>
-    	<li>Una nueva base de datos climáticos para campos de hielo norte. (2017) </li>
+        <li>Alvial Vásquez, Francisco-J.;Abarca-del-Río, Rodrigo; Ávila, Andrés I. (2019). Construcción de una nueva climatología y base de datos de precipitación en alta resolución sobre la zona Centro-Sur de Chile
+		(34°S-41°S) obtenida mediante un proceso dinámico geoestadístico. 6to. Congreso de Oceanografía Física, Meteorología y Clima del Pacifico Sur Oriental, Puerto Montt, Chile.</li>
+	<li>Alvial Vásquez, Francisco-J; Abarca-del-Río, Rodrigo;Orrego Verdugo, Raúl Alejandro (2018). Set of high-resolution precipitation gridded data on the South-Central zone (34 • S-41 • S) of Chile. Southamerica water from space conference,
+		 Santiago, Chile.</li>
+	<li>Alvial Vásquez, Francisco-J.; Vargas Rojas, Victor Manuel; Abarca-del-Río, Rodrigo (2018). Mapeo de zonas de protección de aguas superficiales en terrenos agro-forestales sobre una microcuenca de la región del Ñuble,
+		 Valdivia, Chile.</li>
+    	<li>Alvial Vásquez, Francisco-J.; Roux, Hélène; Abarca-del-Río, Rodrigo (2017). Modelación de inundaciones repentinas, evaluación del model Marine y su aplicabilidad en cuencas chilenas. 
+	    V Congreso de Oceanografía Física, Meteorología y Clima del Pacífico sur  Oriental, Concepción, Chile.</li>
+    	<li>Alvial Vásquez, Francisco-J.; Gutiérrez C., Juan Carlos; Abarca-del-Río, Rodrigo (2017). Una nueva base de datos climáticos para campos de hielo norte.
+		Congreso Internacional "Uso de tecnologias para el manejo racional del agua", Chillán, Chile.</li>
     </ul>
 </div>
 	<footer class="site-footer clearfix">
