--- a/teaching.html
+++ b/teaching.html
@@ -29,8 +29,9 @@
 	</nav>
 	
 	
-	
-	
+<footer class="site-footer clearfix">
+	<a href="#top" id="back-to-top" class="back-top"></a>
+		
 	</footer>
 </div>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
